use URL params instead of body for getting products
